app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-example
  name: deployment-example
spec:
  selector:
    matchLabels:
      app: deployment-example
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deployment-example
    spec:
      serviceAccountName: acm-demo
      containers:
      - image: quay.io/akrohg/acm-demo:v1
        imagePullPolicy: Always
        name: deployment-example
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
